# OAuth2-Rust

./: .env.example  .gitignore  LICENSE  Readme.md
oauth/: Cargo.toml
oauth/examples/: github_oauth2.rs
oauth/src/: client.rs  config.rs  provider.rs
oauth/src/client/: auth_response.rs  token_response.rs
oauth/src/providers/: github.rs  gmail.rs  outlook.rs
oauth2/: Cargo.toml
oauth2/src/: client.rs  engine.rs  main.rs  provider.rs
oauth2/src/client/: auth_callback.rs  crsf_token.rs  oauth_error.rs  pkce_code_challenge.rs  token_response.rs
oauth2/src/engine/: app_config.rs  auth_callback.rs  dpop.rs  id_token.rs  oauth_error.rs  pkce_code_challenge.rs  token_response.rs
oauth2/src/provider/: github.rs  gmail.rs  outlook.rs  registry.rs
