[package]
name = "oauth2"
version = "0.1.0"
edition = "2024"

[dependencies]
url = "2"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
clap = { version = "4.6.1", features = ["derive", "env"] }
dotenvy = "0.15"
thiserror = "2.0.18"
serde_json = "1.0.150"
jsonwebtoken = "9"
p256 = { version = "0.13", features = ["ecdsa", "pkcs8"] }